# CTFDpy

./: .gitignore  CODEOWNERS  README.md  pyproject.toml  ruff.toml
ctfdpy/ctfdpy/: __init__.py  ctfd.py  exceptions.py  http.py  members.py  models.py  teams.py  users.py
ctfdpy/ctfdpy/models/: data.py  inputs.py
examples/sync/: base.py
tests/sync_tests/: requests_test.py  users_tests.py
