[tool.poetry]
name = "ctfdpy"
version = "0.1.0"
description = "CTFd API wrapper written in Python with built-in types"
authors = ["Hitsuji-M <erwann.masson@gmail.com>", "Anemys <abdelmalik.kerbadou@intrinsec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = "^0.27.0"}
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
